2002-07-18  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (gtk_html_insert_html_generic): pass the engine.
	(update_embedded_object_parent): remove the condition.

	* htmlembedded.c (html_embedded_class_init): actually attach the
	reparent method.

	* htmlembedded.h: add new reparent method.

	* htmlembedded.c (html_embedded_reparent): add new reparent function.

	* gtkhtml.c (gtk_html_insert_html_generic): reparent the embedded
	objects (this is not yet a complete fix).
	(gtk_html_modify_indent_by_delta): make this static.

2002-07-15  Larry Ewing  <lewing@ximian.com>

	* htmlengine-edit-clueflowstyle.c (set_props): fix a size problem.

2002-07-18  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit.c (html_engine_set_title): emit TITLE_CHANGED
	signal

2002-07-17  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (get_tags): optimized output

2002-07-15  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (layout_line): fix new line condition

2002-07-12  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_set_class_data): return if class_name
	is NULL
	(get_class_table): ditto
	(parse_d): be more careful when class_name is NULL

2002-07-09  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (html_clueflow_modify_indentation_by_delta): fix
	totally broken logic that was here before.  I must be insane.

2002-07-09  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (divide_upto_preferred_width): fixed part
	calculation

	* htmltextslave.c (get_offset_for_pointer): fixed offset
	calculation

2002-07-08  Larry Ewing  <lewing@ximian.com>

	* htmlsearch.c (html_search_new): stop trying to substitute &nbsp;
	and spaces, see bug #24446.

2002-07-08  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (draw_item): use first slave for postion
	calculation instead of text object, this fixes item drawing with
	new layouting

2002-07-05  Radek Doulik  <rodo@ximian.com>

	* htmlselect.c (html_select_set_text): use e_utf8_to_gtk_string
	and not e_utf8_from_gtk_string
